[package]
name = "drand"
version = "0.1.0"
authors = ["Victor Lopez <victor@codx.io>"]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/codx-dev/drand"
description = "A distributed randomness beacon client."

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
drand-verify = "0.3"
hex = "0.4"
tokio = { version = "1.21", features = ["macros"] }